--- a/lib/TODO.txt
+++ b/lib/TODO.txt
@@ -1,8 +1,3 @@
-add ending / credits after final cutscene
-add miscellaneous sounds as needed
 get music from Chris
-	final city music
-	overworld music
+	forest music
 	title screen music
-set start world to title
-remove autoexec
